# gil

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
benches/: benchmark.rs  mpmc_sharded_benchmark.rs  mpsc_benchmark.rs  mpsc_sharded_benchmark.rs  spsc_benchmark.rs  spsc_efficiency.rs  spsc_parking_benchmark.rs  spsc_parking_efficiency.rs
examples/: mpsc_test.rs  test.rs
src/: backoff.rs  cell.rs  lib.rs  padded.rs  queue.rs  receiver.rs  sender.rs
src/mpmc/: mod.rs  queue.rs  receiver.rs  sender.rs
src/mpmc/sharded/: mod.rs  receiver.rs  sender.rs
src/mpsc/: cell.rs  mod.rs  queue.rs  receiver.rs  sender.rs
src/mpsc/sharded/: mod.rs  receiver.rs  sender.rs
src/sharded_mpmc/: mod.rs  receiver.rs  sender.rs
src/sharded_mpsc/: mod.rs  receiver.rs  sender.rs
src/spmc/: mod.rs  queue.rs  receiver.rs  sender.rs
src/spsc/: mod.rs  queue.rs  receiver.rs  sender.rs  shards.rs
src/spsc/parking/: mod.rs  queue.rs  receiver.rs  sender.rs
