[package]
name = "gil"
version = "0.5.7"
edition = "2024"
authors = ["Abhik Jain <abhik@abhikjain.xyz>"]
description = "A collection of high-performance, lock-free concurrent queues (SPSC, MPSC, MPMC, SPMC) with sync and async support"
license = "MIT"
repository = "https://github.com/abhikjain360/gil"
documentation = "https://docs.rs/gil"
homepage = "https://github.com/abhikjain360/gil"
keywords = ["queue", "spsc", "channel", "async", "lock-free"]
categories = ["concurrency", "data-structures", "asynchronous"]
readme = "README.md"
exclude = [".lazy.lua", "Cargo.lock", "AGENTS.md", "CLAUDE.md"]

[dependencies]
futures = { version = "0.3.31", optional = true, default-features = false }
loom = { version = "0.7.2", optional = true }

[features]
default = ["std"]
std = []
async = ["dep:futures"]
async-std = ["async", "std", "futures/std"]

[[example]]
name = "spsc_test"

[[example]]
name = "spsc_async_test"
required-features = ["async"]

[[bench]]
name = "spsc_benchmark"
harness = false

[[bench]]
name = "spsc_parking_benchmark"
harness = false

[[bench]]
name = "mpsc_benchmark"
harness = false

[[bench]]
name = "mpmc_benchmark"
harness = false

[[bench]]
name = "spmc_benchmark"
harness = false

[[bench]]
name = "mpsc_sharded_benchmark"
harness = false

[[bench]]
name = "mpmc_sharded_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.8.1", features = [
    "async",
    "async_futures",
    "real_blackbox",
] }

[profile.profiling]
inherits = "release"
debug = true
strip = false
